src/test/ui/type-alias-impl-trait/generic_type_does_not_live_long_enough.nll.stderr
error: at least one trait must be specified
  --> $DIR/generic_type_does_not_live_long_enough.rs:14:24
   |
LL | type WrongGeneric<T> = impl 'static;
   |                        ^^^^^^^^^^^^

error: non-defining opaque type use in defining scope
  --> $DIR/generic_type_does_not_live_long_enough.rs:10:18
   |
LL |     let z: i32 = x;
   |                  ^
   |
note: used non-generic type `&'static i32` for generic parameter
  --> $DIR/generic_type_does_not_live_long_enough.rs:14:19
   |
LL | type WrongGeneric<T> = impl 'static;
   |                   ^

error[E0310]: the parameter type `T` may not live long enough
  --> $DIR/generic_type_does_not_live_long_enough.rs:18:5
   |
LL |     t
   |     ^ ...so that the type `T` will meet its required lifetime bounds
   |
help: consider adding an explicit lifetime bound...
   |
LL | fn wrong_generic<T: 'static>(t: T) -> WrongGeneric<T> {
   |                   +++++++++

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0310`.
